# ddr_robot

./: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  main.cpp  transformation.h
imagenes/1_cambio_direccion/: s2.ogv
imagenes/2_sin_cambio_direccion/: init  init~  s2.ogv
imagenes/3_optimo/: init
imagenes/5_Ubaldo/: final_3d  final_current  final_historial  final_imagen1  final_realista  final_reducido  inicio_3d  inicio_current  inicio_realista  init  init~  mitad_3d  mitad_current  mitad_historial  mitad_imagen2  mitad_realista  mitad_reducido
imagenes/6_Ubaldo2/: final_3d  final_current  final_historial  final_realista  final_reducido  inicio_current  inicio_historial  inicio_imagen2  init  mitad_3d  mitad_current  mitad_historial  mitad_imagen1  mitad_realista  mitad_reducido
imagenes/7_sub_optimo/: final_current  final_historial  final_realista  final_reducido  inicio_current  mitad_3d  mitad_current  mitad_historial  mitad_imagen1  mitad_imagen2  mitad_realista  mitad_reducido  sub_optimo.avi
imagenes/8_sub_optimo/: final_3d  final_current  final_historial  final_realista  final_reducido  inicio_current  init  mitad_3d  mitad_current  mitad_historial  mitad_imagen2  mitad_realista  mitad_reducido
imagenes/correo/sub_opt1/: init
include/: camera.h  evader.h  objloader.h  robot.h  robot.h~  sensorCamera.h  simulator.h  simulator.h~  transformation.h  vector3D.h  world.h
src/: camera.cpp  evader.cpp  objloader.cpp  robot.cpp  sensorCamera.cpp  simulator.cpp  transformation.cpp  vector3D.cpp  world.cpp
